# Microgrid_Project

./: .env.example  .gitignore  BUG_FIXES.md  BUG_FIX_REPORT.md  DEPLOYMENT.md  DOCUMENTATION.md  Dockerfile  PROFESSIONAL_FEATURES_PLAN.md  README.md  SNOWFLAKE_DEPLOYMENT.md  TODO.md  app.py  auth.py  branding.py  database.py  docker-compose.yml  forecast.py  index.html  logic.py  nginx.conf  notifications.py  pyproject.toml  reports.py  requirements.txt  sample_data_template.csv  scheduling.py  setup_snowflake.py  snowflake_db.py  user_features.py  weather.py
.github/workflows/: deploy.yml
.streamlit/: config.toml
src/: __init__.py  exceptions.py  types.py
src/config/: __init__.py  settings.py
src/utils/: __init__.py  logging.py
