[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-microgrid-manager"
version = "2.0.0"
description = "Advanced Energy Optimization System for Microgrid Management"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Smart Microgrid Team", email = "dev@microgrid.local"}
]
keywords = [
    "energy", "microgrid", "optimization", "renewable", "solar", "wind",
    "battery", "smart-grid", "energy-management", "linear-programming"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Energy Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    # Core application dependencies
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.18.0",
    
    # Optimization
    "pulp>=2.7.0",
    
    # Machine Learning
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    
    # Database
    "sqlite3",
    
    # HTTP requests (for weather API)
    "requests>=2.31.0",
    
    # Configuration
    "python-dotenv>=1.0.0",
]

# Optional dependencies for extended features
[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.5.0",
]

excel = [
    "openpyxl>=3.1.0",
]

pdf = [
    "reportlab>=4.0.0",
]

all = [
    "smart-microgrid-manager[dev]",
    "smart-microgrid-manager[excel]",
    "smart-microgrid-manager[pdf]",
]

[project.scripts]
microgrid-app = "app:main"

[project.urls]
Homepage = "https://github.com/microgrid/smart-microgrid-manager"
Repository = "https://github.com/microgrid/smart-microgrid-manager"
Issues = "https://github.com/microgrid/smart-microgrid-manager/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["docs", "tests", "*.egg-info", "venv", ".venv", "src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "C4",
]
ignore = [
    "E501", "B008", "PLR0913", "PLR2004", "C901", "SIM108",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
ignore_missing_imports = true
strict_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "pandas.*", "numpy.*", "streamlit.*", "plotly.*",
    "pulp.*", "sklearn.*",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "venv/*", ".venv/*"]

[tool.pre-commit-config]
repos = [
    {
        repo = "https://github.com/astral-sh/ruff-pre-commit",
        rev = "v0.1.0",
        hooks = [
            {"id": "ruff", "args": ["--fix"]},
            {"id": "ruff-format"},
        ],
    },
]

